releng: build for examples
Change-Id: I427c6b43658ec20879b5d3f0e8e6d67ffa830a05
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>