@@ -297,7 +297,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_juno,TP_build,report,PublishStep_5,report_feature,emde,PublishStep_8,PublishStep_9,PublishStep_10,PublishStep_11,emde_feature,ad,PublishStep_14,ad_feature,kitalpha_examples" />
+	<target name="all" depends="CleanStep_1,TP_juno,TP_build,report,PublishStep_5,emde,PublishStep_7,PublishStep_8,PublishStep_9,PublishStep_10,ad,PublishStep_12,kitalpha_examples" />
 	<target name="TP_juno" depends="TP_juno_CreateFolderStep_1,TP_juno_DownloadStep_2,TP_juno_UnzipStep_3" />
 	<target name="TP_build" depends="TP_build_TP_build,TP_build_install_egf_TP_build" />
 	<target name="CleanStep_1" >
@@ -443,7 +443,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_8" depends="init,install.buckminster" >
+	<target name="PublishStep_7" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -472,7 +472,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_9" depends="init,install.buckminster" >
+	<target name="PublishStep_8" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -501,7 +501,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_10" depends="init,install.buckminster" >
+	<target name="PublishStep_9" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -530,7 +530,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_11" depends="init,install.buckminster" >
+	<target name="PublishStep_10" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -559,7 +559,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_14" depends="init,install.buckminster" >
+	<target name="PublishStep_12" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -663,127 +663,13 @@ This file was generated by Eclipse EGF
                 <arg value="-r" />
                 <arg value="${egf.repo.url}" />
                 <arg value="-r" />
-                <arg value="${eclipse.download.prefix}/releases/${eclipse_version}" />
+                <arg value="${eclipse.download.prefix}/releases/juno" />
 
 
                 <arg value="-i" />
                 <arg value="org.eclipse.egf.sdk.feature.group" />                
 
 
-
-            </args>
-        </eclipse.launch>
-	</target>	
-	<target name="report_feature" depends="init,install.director" >
-        <eclipse.launch app="director">
-            <args>
-                <jvmarg value="-Declipse.p2.mirrors=false" />
-                    <jvmarg value="-Xmx1024m"/>
-                    <jvmarg value="-XX:MaxPermSize=256m"/>
-
-
-            	<arg value="-roaming" />
-            	<arg value="-profileProperties" />
-                <arg value="org.eclipse.update.install.features=true " />
-
-                <arg value="-d" />
-                <arg value="${publish}/TP_kitalpha" />
-                
-                <arg value="-p" />
-                <arg value="SDKProfile" />
-
-
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.report.example.customization.feature/site.p2" />
-                
-
-
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.report.example.customization.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.report.example.customization.source.feature.feature.group" />
-
-            </args>
-        </eclipse.launch>
-	</target>	
-	<target name="emde_feature" depends="init,install.director" >
-        <eclipse.launch app="director">
-            <args>
-                <jvmarg value="-Declipse.p2.mirrors=false" />
-                    <jvmarg value="-Xmx1024m"/>
-                    <jvmarg value="-XX:MaxPermSize=256m"/>
-
-
-            	<arg value="-roaming" />
-            	<arg value="-profileProperties" />
-                <arg value="org.eclipse.update.install.features=true " />
-
-                <arg value="-d" />
-                <arg value="${publish}/TP_kitalpha" />
-                
-                <arg value="-p" />
-                <arg value="SDKProfile" />
-
-
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.emde.example.simplecomponent.all.feature/site.p2" />
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.emde.example.simplecomponent.feature/site.p2" />
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.emde.example.simplecomponent.performance.feature/site.p2" />
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.emde.example.simplecomponent.safety.feature/site.p2" />
-                
-
-
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.emde.example.simplecomponent.all.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.emde.example.simplecomponent.all.source.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.emde.example.simplecomponent.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.emde.example.simplecomponent.source.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.emde.example.simplecomponent.performance.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.emde.example.simplecomponent.performance.source.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.emde.example.simplecomponent.safety.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.emde.example.simplecomponent.safety.source.feature.feature.group" />
-
-            </args>
-        </eclipse.launch>
-	</target>	
-	<target name="ad_feature" depends="init,install.director" >
-        <eclipse.launch app="director">
-            <args>
-                <jvmarg value="-Declipse.p2.mirrors=false" />
-                    <jvmarg value="-Xmx1024m"/>
-                    <jvmarg value="-XX:MaxPermSize=256m"/>
-
-
-            	<arg value="-roaming" />
-            	<arg value="-profileProperties" />
-                <arg value="org.eclipse.update.install.features=true " />
-
-                <arg value="-d" />
-                <arg value="${publish}/TP_kitalpha" />
-                
-                <arg value="-p" />
-                <arg value="SDKProfile" />
-
-
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.ad.example.simplecomponent.safety.viewpoint.feature/site.p2" />
-                
-
-
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.ad.example.simplecomponent.safety.viewpoint.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.ad.example.simplecomponent.safety.viewpoint.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
